--- a/index.html
+++ b/index.html
@@ -3,31 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
+    <title>Joel Hukubun</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    
-    <h1>Menuju 2021</h1>
-    <div class="countdown-container">
-        <div class="countdown-el days-c">
-            <p class="big-text" id="days">0</p>
-            <h4>hari</h4>
+    <section>
+        <div>
+            <h1>Hi, Saya Joel Hukubun</h1>
+            <p>Ini adalah kalimat</p>
+            <a href="#">Link</a>
         </div>
-        <div class="countdown-el hours-c">
-            <p class="big-text" id="hours">0</p>
-            <h4>jam</h4>
-        </div>
-        <div class="countdown-el mins-c">
-            <p class="big-text" id="mins">0</p>
-            <h4>menit</h4>
-        </div>
-        <div class="countdown-el seconds-c">
-            <p class="big-text" id="seconds">0</p>
-            <h4>detik</h4>
-        </div>
-    </div>
-    <footer>dibuat oleh Joel Hukubun</footer>
+    </section>
 </body>
 </html>
