--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joel Hukubun</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
-    <section>
-        <div>
-            <h1>Hi, Saya Joel Hukubun</h1>
-            <p>Ini adalah kalimat</p>
-            <a href="#">Link</a>
-        </div>
+  </head>
+  <body>
+    <section class="s1">
+      <div class="main-container">
+        <h1>Hi, Saya Joel Hukubun</h1>
+        <p>Ini adalah kalimat</p>
+        <a href="#">Link</a>
+      </div>
     </section>
-</body>
+    <section class="s2">
+      <div class="main-container">
+        About
+      </div>
+    </section>
+    <section class="s1">
+      <div class="main-container">
+        Portfolio
+      </div>
+    </section>
+    <section class="s2">
+      <div class="main-container">
+        Contact
+      </div>
+    </section>
+  </body>
 </html>
