--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
   <body>
     <section class="s1">
       <div class="main-container">
-        <h1>Hi, Saya Joel Hukubun</h1>
-        <p>Ini adalah kalimat</p>
-        <a href="#">Link</a>
+        <div class="greeting-wrapper">
+          <h1>Hi, Saya Joel Hukubun</h1>
+        </div>
+        <div class="intro-wrapper">
+          <div class="nav-wrapper">
+            Nav
+          </div>
+          <div class="left-column">
+            Left-column
+          </div>
+          <div class="right-column">
+            Right-column
+          </div>
+        </div>
       </div>
     </section>
     <section class="s2">
