--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     <section class="s1">
       <div class="main-container">
         <div class="greeting-wrapper">
-          <h1>Hi, Saya Joel Hukubun</h1>
+          <h1>Hi, I'm Joel Hukubun</h1>
         </div>
         <div class="intro-wrapper">
           <div class="nav-wrapper">
-            Nav
+            <div class="dots-wrapper">
+              <div id="dot-1" class="browser-dot"></div>
+              <div id="dot-2" class="browser-dot"></div>
+              <div id="dot-3" class="browser-dot"></div>
+            </div>
+            <div id="navigation">
+              <li><a href="#"></a>Contact</li>
+            </div>
           </div>
           <div class="left-column">
             Left-column
