--- a/index.html
+++ b/index.html
@@ -29,10 +29,34 @@
             </div>
           </div>
           <div class="left-column">
-            Left-column
+            <img id="profile-pic" src="images/joel.jpg" />
+            <h5 style="text-align: center; line-height: 0;">
+              Personalize Theme
+            </h5>
+            <div id="theme-option-wrapper">
+              <div id="light-mode" class="theme-dot"></div>
+              <div id="blue-mode" class="theme-dot"></div>
+              <div id="green-mode" class="theme-dot"></div>
+              <div id="purple-mode" class="theme-dot"></div>
+            </div>
+            <p id="settings-note">
+              *Theme settings will be saved for <br />your next visit
+            </p>
           </div>
           <div class="right-column">
-            Right-column
+            <div id="preview-shadow">
+              <div id="preview">
+                <div id="corner-tl" class="corner"></div>
+                <div id="corner-tr" class="corner"></div>
+                <h3>What I Do</h3>
+                <p>
+                  I'm a front-end developer and now I enjoy learning all about
+                  web developer.
+                </p>
+                <div id="corner-br" class="corner"></div>
+                <div id="corner-bl" class="corner"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
