menambah about section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,37 @@
     </section>
     <section class="s2">
       <div class="main-container">
-        About
+        <div class="about-wrapper">
+          <div class="about-me">
+            <h4>More about me</h4>
+  
+            <p>I build new projects just to tickle my brain and love learning how they're made.</p>
+  
+            <p>While I keep busy, I still take interviews in search of a great team & projects that interest me.</p> 
+            <hr>
+  
+            <h4>TOP EXPERTISE</h4>
+  
+            <p>Front-end developer with primary focus on JavaScript and a little bit of AWS </p>
+  
+            <div id="skills">
+              <ul>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>AWS (EC2/RDS/S3)</li>
+                <li>HTML/CSS</li>
+              </ul>
+  
+            </div>
+  
+          </div>
+          <div class="social-links">
+            <h3>Find me on Twitter & Facebook</h3>
+  
+            <a target="_blank" href="https://twitter.com/joelicioussss">Twitter: @joelicioussss</a>
+            <br>
+            <a target="_blank" href="https://www.facebook.com/joelhkbn">Facebook: Joel Hukubun</a>
+          </div>
       </div>
     </section>
     <section class="s1">
