membuat changing theme dan menambah beberapa css dan js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link id="theme-style" rel="stylesheet" type="text/css" href="">
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -34,10 +35,10 @@
               Personalize Theme
             </h5>
             <div id="theme-option-wrapper">
-              <div id="light-mode" class="theme-dot"></div>
-              <div id="blue-mode" class="theme-dot"></div>
-              <div id="green-mode" class="theme-dot"></div>
-              <div id="purple-mode" class="theme-dot"></div>
+              <div data-mode="light" id="light-mode" class="theme-dot"></div>
+              <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
+              <div data-mode="green" id="green-mode" class="theme-dot"></div>
+              <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
             </div>
             <p id="settings-note">
               *Theme settings will be saved for <br />your next visit
@@ -134,13 +135,7 @@
               </div>
             </div>
           </div>
-  
         </div>
-      </div>
-    </section>
-    <section class="s2">
-      <div class="main-container">
-        Contact
       </div>
     </section>
   </body>
